[gd_scene load_steps=3 format=2]

[ext_resource path="res://bullet/bullet.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "fly"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="bullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 18
gravity_scale = 3.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]
visible = false

[node name="particles" type="Particles2D" parent="."]
show_behind_parent = true
local_coords = false

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/fly = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
